--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "ae52d236",
    "metadata": {
     "scrolled": true
@@ -21,10 +21,9 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\lauri\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     /home/syomasa/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\lauri\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package punkt to /home/syomasa/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
@@ -180,7 +179,7 @@
        "[118 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "fe6512ab",
    "metadata": {
     "scrolled": true
@@ -281,7 +280,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\python\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:559: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "/home/syomasa/.conda/envs/env/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
@@ -293,14 +292,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Extraversion: 0.5623987034035657\n"
+      "Accuracy for Extraversion: 0.5607779578606159\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\python\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:559: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "/home/syomasa/.conda/envs/env/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
@@ -312,14 +311,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Neuroticism: 0.5753646677471637\n"
+      "Accuracy for Neuroticism: 0.5818476499189628\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\python\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:559: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "/home/syomasa/.conda/envs/env/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
@@ -331,14 +330,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Agreeableness: 0.5559157212317666\n"
+      "Accuracy for Agreeableness: 0.5445705024311183\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\python\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:559: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "/home/syomasa/.conda/envs/env/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
@@ -350,8 +349,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Conscientiousness: 0.5494327390599676\n",
-      "Accuracy for Openness: 0.6012965964343598\n",
+      "Accuracy for Conscientiousness: 0.5283630470016207\n",
+      "Accuracy for Openness: 0.6142625607779578\n",
       "Training and testing DONE!\n"
      ]
     },
@@ -359,7 +358,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\python\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:559: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "/home/syomasa/.conda/envs/env/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
@@ -378,7 +377,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "df = pd.read_csv(r\"data/essays.csv\", names=[\"author_id\", \"essay\", \"Extraversion\", \"Neuroticism\",\n",
-    "                                      \"Agreeableness\", \"Conscientiousness\", \"Openness\"], encoding=\"ansi\") # load essay dataset\n",
+    "                                      \"Agreeableness\", \"Conscientiousness\", \"Openness\"], encoding=\"cp1252\") # load essay dataset\n",
     "x = df['essay'][1:]\n",
     "x = x.str.lower() # to lowercase\n",
     "\n",
@@ -408,6 +407,8 @@
     "    predictions = classifiers[trait].predict(xx_test) # predict for test set\n",
     "    score = accuracy_score(y_test, predictions)\n",
     "    print(\"Accuracy for {}: {}\".format(choices[trait][0], score))\n",
+    "    \n",
+    "\n",
     "\n",
     "print(\"Training and testing DONE!\")"
    ]
@@ -575,6 +576,9 @@
     "        traitProbs[character][trait] = prob[i] \n",
     "\n",
     "jutut = pd.DataFrame.from_dict(traitProbs, orient=\"index\") # display table containing the probabilites of every trait for each character\n",
+    "\n",
+    "\n",
+    "\n",
     "display(jutut)"
    ]
   },
@@ -2779,7 +2783,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2793,7 +2797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
